# yaros

./: .gdbinit  .gitignore  Cargo.toml  build-toolchain.sh  build.rs  justfile  qemu.ld  qemu_wrapper.sh  readme.md  rust-toolchain  rust-toolchain.toml  todo.md
.cargo/: config  config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  miri.yml  rust.yml  setup.sh  test.yml
.helix/: languages.toml
common/: Cargo.toml
common/src/: array_vec.rs  big_endian.rs  consumable_buffer.rs  (+5 more)
doc/: qemu.dts
integration-tests/: Cargo.toml
kernel/: .gitignore  Cargo.toml  build.rs  qemu.ld
kernel/src/: assert.rs  cpu.rs  device_tree.rs  main.rs  panic.rs  scheduler.rs
kernel/src/asm/: boot.S  mod.rs  trap.S
kernel/src/debugging/: backtrace.rs  eh_frame_parser.rs  mod.rs  symbols.rs  unwinder.rs
kernel/src/drivers/virtio/: capability.rs
kernel/src/drivers/virtio/net/: mod.rs
kernel/src/interrupts/: mod.rs  plic.rs  trap.rs  trap_cause.rs
kernel/src/io/: println.rs  stdin_buf.rs  uart.rs
kernel/src/klibc/: elf.rs  macros.rs  mmio.rs  mod.rs  mutex.rs  sizes.rs  util.rs
kernel/src/logging/: configuration.rs  mod.rs
kernel/src/memory/: heap.rs  linker_information.rs  mod.rs  page.rs  page_allocator.rs  page_tables.rs  runtime_mappings.rs
kernel/src/net/: arp.rs  ipv4.rs  mac.rs  mod.rs  sockets.rs
kernel/src/pci/: allocator.rs  devic_tree_parser.rs  lookup.rs  mod.rs
kernel/src/processes/: loader.rs  mod.rs  process.rs  process_list.rs  process_table.rs  scheduler.rs  timer.rs
kernel/src/sbi/: mod.rs  sbi_call.rs
kernel/src/sbi/extensions/: base_extension.rs  hart_state_extension.rs  legacy_extension.rs  mod.rs  timer_extension.rs
kernel/src/syscalls/: mod.rs  validator.rs
kernel/src/test/: array_vec.rs  mod.rs  mutex.rs  qemu_exit.rs
kernel/src/test/test_data/: dtb
kernel/src/test/test_data/elf/: test.elf
playground/: .gitignore  debug.sh  justfile  playground.S  virt.ld
src/: heap.rs  init.rs  main.rs  mmio.rs  page_allocator.rs  page_tables.rs  panic.rs  plic.rs  println.rs  trap.rs  uart.rs  util.rs
src/kernel/: Cargo.toml  build.rs  qemu.ld
src/kernel/src/: .gitignore  assert.rs  backtrace.rs  cpu.rs  device_tree.rs  main.rs  panic.rs
src/kernel/src/asm/: boot.S  symbols.S  trap.S
src/kernel/src/autogenerated/: .gitignore  mod.rs
src/kernel/src/debug/: backtrace.rs  eh_frame_parser.rs  mod.rs
src/kernel/src/debugging/: backtrace.rs  eh_frame_parser.rs  mod.rs  unwinder.rs
src/kernel/src/drivers/virtio/: capability.rs  mod.rs  virtqueue.rs
src/kernel/src/drivers/virtio/net/: mod.rs
src/kernel/src/interrupts/: mod.rs  plic.rs  trap.rs
src/kernel/src/io/: mod.rs  uart.rs
src/kernel/src/klibc/: elf.rs  macros.rs  mmio.rs  mod.rs  runtime_initialized.rs  sizes.rs  util.rs
src/kernel/src/logging/: configuration.rs  mod.rs
src/kernel/src/memory/: allocated_pages.rs  heap.rs  linker_information.rs  mod.rs  page.rs  page_allocator.rs  page_tables.rs  runtime_mappings.rs
src/kernel/src/net/: arp.rs  ethernet.rs  ip_address.rs  ipv4.rs  mod.rs  parsed_packets.rs  sockets.rs  udp.rs
src/kernel/src/pci/: allocator.rs  devic_tree_parser.rs  mod.rs
src/kernel/src/processes/: loader.rs  mod.rs  process.rs  process_list.rs  scheduler.rs  timer.rs
src/kernel/src/sbi/: mod.rs  sbi_call.rs
src/kernel/src/sbi/extensions/: base_extension.rs  mod.rs
src/kernel/src/syscalls/: mod.rs  validator.rs
src/kernel/src/test/: leb128.rs  mod.rs  mutex.rs  qemu_exit.rs
src/kernel/src/test/test_data/elf/: .eh_frame
src/macros/: Cargo.toml
src/macros/src/: lib.rs
system-tests/: Cargo.toml
userspace/: Cargo.toml  build.rs  userspace.ld
userspace/.cargo/: config  config.toml
userspace/src/: _start.rs  heap.rs  lib.rs  panic.rs  print.rs  util.rs
userspace/src/net/: mod.rs
(+54 files in other folders)
