[workspace]
members = [
    "src/common",
    "src/kernel",
    "src/userspace",
]
default-members = ["src/kernel"]
resolver = "2"

[workspace.package]
description = "Yet Another Risc/Rust Operating System"
authors = ["Maurice Hieronymus <yaros@ilovebinary.com>"]
version = "0.1.0"

[profile.release]
panic = 'abort'
lto = "fat"
debug = true

[profile.dev]
panic = 'abort'