[workspace]
members = [
    "common",
    "kernel",
    "userspace",
]
default-members = ["kernel"]
resolver = "3"

[workspace.package]
description = "Yet another Rust Operating System (YaROS)"
authors = ["Maurice Hieronymus <yaros@ilovebinary.com>"]
version = "0.1.0"

[profile.release]
panic = 'abort'
lto = "fat"
debug = true
overflow-checks = true
debug-assertions = true

[profile.dev]
panic = 'abort'
overflow-checks = true
