[workspace]
members = [
    "common",
    "kernel",
    "userspace",
]
default-members = ["kernel"]
resolver = "2"

[workspace.package]
description = "Yet another Operating System (YaOS)"
authors = ["Maurice Hieronymus <yaos@ilovebinary.com>"]
version = "0.1.0"

[profile.release]
panic = 'abort'
lto = "fat"
debug = true
overflow-checks = true
debug-assertions = true

[profile.dev]
panic = 'abort'
overflow-checks = true
