[package]
name = "yaos"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

[[bin]]
name = "kernel"
path = "src/main.rs"
test = true

[dev-dependencies]
elf = { version = "0.7", default-features = false }
gimli = { version = "0.31", default-features = false, features = ["read"] }

[target.'cfg(not(miri))'.dev-dependencies]
unwinding = { version = "0.2.4", default-features = false, features = ["fde-static", "panic", "personality", "unwinder"] }
