[package]
name = "userspace"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

# Without theese the rust-analyzer would try to build the crate with tests enabled
# which is not possible in no_std environments. I'm looking for a way where I don't
# have to specify that individually for every file. But because userspace will
# change anyways in the future, let's leave like that for now.
[lib]
test = false
bench = false

[[bin]]
name = "connect4"
test = false
bench = false

[[bin]]
name = "init"
test = false
bench = false

[[bin]]
name = "loop"
test = false
bench = false

[[bin]]
name = "panic"
test = false
bench = false

[[bin]]
name = "prog1"
test = false
bench = false

[[bin]]
name = "prog2"
test = false
bench = false

[[bin]]
name = "udp"
test = false
bench = false

[[bin]]
name = "yash"
test = false
bench = false
