[package]
name = "yaros"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

[[bin]]
name = "kernel"
path = "src/main.rs"
test = true