[package]
name = "macros"
edition = "2021"
description.workspace = true
authors.workspace = true
version.workspace = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = { version = "1.0.33" }
syn = { version = "2.0.38", features = ["full"] }
